<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".tela_menu">


    <View
        android:id="@+id/headerBackground"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:background="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo_projeto"
        android:contentDescription="@string/app_logo"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_title" android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogo"
        app:layout_constraintBottom_toTopOf="@+id/textViewSubtitle"
        app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent" />




    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_subtitle" android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardStudy"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">


            <ImageView
                android:id="@+id/iconStudy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_menu_gallery"
                app:tint="@android:color/white"
                android:contentDescription="@string/card_study_icon_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_study_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/iconStudy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_study_description"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textViewSecondaryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/secondary_title" android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cardStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecondaryTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/buttonMenuODS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ods_mar"
            android:backgroundTint="@color/purple_500"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:padding="12dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="8dp"
            android:drawableTop="@android:drawable/ic_menu_edit"/>
        <Button
            android:id="@+id/buttonMenuProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_progress" android:backgroundTint="@color/purple_700"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:padding="12dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="8dp"
            android:drawableTop="@android:drawable/ic_menu_sort_by_size"/>
        <Button
            android:id="@+id/buttonMenuSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_settings" android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:padding="12dp"
            app:cornerRadius="8dp"
            android:drawableTop="@android:drawable/ic_menu_preferences"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textViewFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/footer_text" android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
