<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">




    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_projeto"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />




    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintBottom_toTopOf="@+id/textViewSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




    <Button
        android:id="@+id/buttonStartStudy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_studying"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtitle"
        app:layout_constraintBottom_toTopOf="@+id/buttonAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_project"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartStudy"
        app:layout_constraintBottom_toTopOf="@+id/textViewFooter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




    <TextView
        android:id="@+id/textViewFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ods_footer_message"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAbout" />




</androidx.constraintlayout.widget.ConstraintLayout>
